--- a/st.html
+++ b/st.html
@@ -68,93 +68,100 @@
 </nav>
 
 <!-- Intro Header -->
-<header class="intro st">
+<header class="intro st" style="padding-top: 40px; padding-bottom: 50px">
 	<div class="intro-body">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2" style="padding-top: 60px">
+				<div class="col-md-8 col-md-offset-2">
 					<h1 class="brand-heading text-left">Engage seniors<br>to (re)establish<br>food-related habits</h1>
-					<h2 class="project-description text-left" style="color: black; padding-top: 20px">
-						Design a <strong>digital prototype</strong><br><br>for a target group of <strong>seniors</strong><br><br>that <strong>facilitates</strong> food-related activities<br><br>using an <strong>interactive table</strong>
+					<h2 class="project-description text-left" style="padding-top: 20px">
+						Design a <strong class="hlw">digital prototype</strong><br><br>for a target group of <strong class="hlw">seniors</strong><br><br>that <strong class="hlw">facilitates</strong> food-related activities<br><br>using an <strong class="hlw">interactive table</strong>
 					</h2>
-					<a style="margin-top: 180px" href="#about" class="btn btn-circle page-scroll">
+					<a style="margin-top: 20px" href="#overview" class="btn btn-circle page-scroll">
 						<i class="fa fa-angle-double-down animated"></i>
 					</a>
-					
+				</div>
 			</div>
 		</div>
 	</div>
 </header>
 
 <!-- Summary Section -->
-<section id="about" class="bg-white">
+<section id="overview" class="bg-white">
 	<div class="container content-section text-center">
 		<div class="row">
 			<h2>Project Overview</h2>
 			<div class="row">
-				<div class="col-lg-12 col-lg-offset-0">
-					<p class="text-left">				
-						<b>Date:</b> July '16 (Duration: 4 weeks)<br>
-						<b>Task:</b> Design a system that facilitates food-related activities using an interactive table<br>
-						<b>Team size:</b> 4 members<br>
-						<b>My role:</b> ....<br>
-						<br>
+				<div class="col-md-8 col-md-offset-2">
+					<p class="text-left">
+						<span class="fa-stack fa-1x">
+					    	<i class="fa fa-calendar fa-stack-1x fa"></i>
+					    </span>July '16 (Duration: 4 weeks)<br>
+					    <span class="fa-stack fa-1x">
+					    	<i class="fa fa-users fa-stack-1x fa"></i>
+					    </span>4 Team members<br>
+					    <span class="fa-stack fa-1x">
+					    	<i class="fa fa-list fa-stack-1x fa"></i>
+					    </span>User research; Build a digital prototype; Usability test<br>
 					</p>
 				</div>
 			</div>
-			<h2>Clients</h2>
-			<div class="row" style="padding-top: 20px">
-				<div class="col-md-4">
-			        <img class="img-fluid" src="img/st/reach.png" style="height:100px; width: auto" alt="">    
-			        </div> 
-			        <div class="col-md-4">
-			         	<img class="img-fluid" src="img/st/tue.gif" style="height:100px; width: auto" alt="">           
-			        </div> 
-			        <div class="col-md-4">
-			        	<img class="img-fluid" src="img/st/tum.png" style="height:100px; width: auto" alt="">      
-			        </div> 
-				</div>
-				<div class="row" style="padding-top: 50px">
-					<h2>Process Overview</h2>
-				</div>
-				<div class="row" style="padding-top: 20px">  
-			            <div class="col-md-4">
-			                <span class="fa-stack fa-3x">
-			                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-			                    <i class="fa fa-users fa-stack-1x fa"></i>
-			                </span>
-			                <h4 class="service-heading">Research</h4>
-			                <p class="text-muted">Contextual Inquiry, Interview, Task Analysis, Affinity Diagram, Benchmarking</p>
-			            </div> 
-			            <div class="col-md-4">
-			                <span class="fa-stack fa-3x">
-			                	<i class="fa fa-circle fa-stack-2x text-primary"></i>
-			                    <i class="fa fa-lightbulb-o fa-stack-1x fa"></i>
-			                </span>
-			                <h4 class="service-heading">Define & Ideate</h4>
-			                <p class="text-muted">Problem statement, Mapping, Crazy 8s, Sketch, Storyboard</p>
-			            </div>
-			            <div class="col-md-4">
-			                <span class="fa-stack fa-3x">
-			                	<i class="fa fa-circle fa-stack-2x text-primary"></i>
-			                    <i class="fa fa-rocket fa-stack-1x fa"></i>
-			                </span>
-			                <h4 class="service-heading">Prototype & Test</h4>
-			                <p class="text-muted">Wireframing, Powerpoint, Wizard of Oz, Usability Testing</p>
-			            </div>
-			    	</div> 
-					<a style="margin-top: 20px; margin-bottom: 40px" href="#single-project" class="btn btn-circle page-scroll">
-					<i class="fa fa-angle-double-down animated"></i>
-					</a>
-				</div>
 		</div>
+		<div class="row" style="padding-top: 40px">
+			<div class="row">
+				
+				<div class="col-md-8 col-md-offset-2">
+				<p class="text-left">Stakeholders</p>
+					<div class="col-md-4">
+				        <img class="img-fluid" src="img/st/reach.png" alt="">    
+				    </div> 
+				    <div class="col-md-4">
+				        <img class="img-fluid" src="img/st/tue.gif" alt="">           
+				    </div> 
+				    <div class="col-md-4">
+				        <img class="img-fluid" src="img/st/tum.png" alt="">       
+					</div>
+				</div>
+			</div>
+		</div>
+			
 	</div>
 </section>
 
 <!-- Summary Section -->
-<section id="summary">
+<section id="processovervie">
 	<div class="container content-section text-center">
-		
+		<div class="col-md-8 col-md-offset-2">
+			<div class="row" style="padding-top: 50px">
+				<h2>Process Overview</h2>
+			</div>
+			<div class="row" style="padding-top: 20px">  
+				<div class="col-md-4">
+				    <span class="fa-stack fa-3x">
+				       	<i class="fa fa-circle fa-stack-2x text-primary"></i>
+				    	<i class="fa fa-users fa-stack-1x fa"></i>
+				    </span>
+				    <h4 class="service-heading">Research</h4>
+				    <p class="text-muted">Contextual Inquiry, Interview, Task Analysis, Affinity Diagram, Benchmarking</p>
+				</div> 
+				<div class="col-md-4">
+				    <span class="fa-stack fa-3x">
+				     	<i class="fa fa-circle fa-stack-2x text-primary"></i>
+				        <i class="fa fa-lightbulb-o fa-stack-1x fa"></i>
+				    </span>
+				    <h4 class="service-heading">Define & Ideate</h4>
+				    <p class="text-muted">Problem statement, Mapping, Crazy 8s, Sketch, Storyboard</p>
+				</div>
+				<div class="col-md-4">
+				    <span class="fa-stack fa-3x">
+				        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+				        <i class="fa fa-rocket fa-stack-1x fa"></i>
+				    </span>
+				   	<h4 class="service-heading">Prototype & Test</h4>
+				    <p class="text-muted">Wireframing, Powerpoint, Wizard of Oz, Usability Testing</p>
+				</div>
+			</div> 
+		</div>
 	</div>
 </section>
 
@@ -180,12 +187,6 @@
 			<div class="col-lg-8 col-lg-offset-2">
 				<p class="text-left">To continue the design process after the user research, the group decided to use the design sprint methodolog. A problem statement and long term goal were defined. We've mapped the problem in order to understand the relationship of different actors during different stages of the process and as a result we got a couple of possible approachs for the project. </p>
 				<img class="img-fluid" src="img/st/ideation.jpg" alt="">
-			</div>
-		</div>
-		<div class="row" style="padding-top: 45px">
-			<h2>Prototyping</h2>
-			<div class="col-lg-8 col-lg-offset-2">
-				<img class="img-fluid" src="img/st/prototyping.png" alt="">
 			</div>
 		</div>
 		<div class="row" style="padding-top: 45px">
