--- a/st.html
+++ b/st.html
@@ -74,7 +74,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<h1 class="brand-heading text-left">Engage seniors<br>to (re)establish<br>food-related habits</h1>
-					<h2 class="project-description text-left" style="padding-top: 20px">
+					<h2 class="project-description text-left" style="color:white; padding-top: 20px">
 						Design a <strong class="hlw">digital prototype</strong><br><br>for a target group of <strong class="hlw">seniors</strong><br><br>that <strong class="hlw">facilitates</strong> food-related activities<br><br>using an <strong class="hlw">interactive table</strong>
 					</h2>
 					<a style="margin-top: 20px" href="#overview" class="btn btn-circle page-scroll">
@@ -92,19 +92,17 @@
 		<div class="row">
 			<h2>Project Overview</h2>
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2">
-					<p class="text-left">
+					<div class="col-md-4 col-md-offset-1">
 						<span class="fa-stack fa-1x">
 					    	<i class="fa fa-calendar fa-stack-1x fa"></i>
-					    </span>July '16 (Duration: 4 weeks)<br>
-					    <span class="fa-stack fa-1x">
+					    </span>July '16 (4 weeks)
+					</div>
+					<div class="col-md-4 col-md-offset-1">
+						<span class="fa-stack fa-1x">
 					    	<i class="fa fa-users fa-stack-1x fa"></i>
-					    </span>4 Team members<br>
-					    <span class="fa-stack fa-1x">
-					    	<i class="fa fa-list fa-stack-1x fa"></i>
-					    </span>User research; Build a digital prototype; Usability test<br>
-					</p>
-				</div>
+					    </span>4 members
+					</div>
+				
 			</div>
 		</div>
 		<div class="row" style="padding-top: 40px">
