--- a/st2.html
+++ b/st2.html
@@ -74,91 +74,123 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<h1 class="brand-heading text-left">Engage seniors<br>to (re)establish<br>food-related habits</h1>
-				</div>
-				<div class="col-md-8 col-md-offset-2" style="padding-top: 40px">
-					<div class="col-sm-4">
-						<span class="fa-stack fa-2x">
-					    	<i class="fa fa-calendar fa-stack-1x fa"></i>
-					    </span>July '16 (4 weeks)
-					</div>
-					<div class="col-sm-4">
-						
-					</div>
-					<div class="col-sm-4">
-						<span class="fa-stack fa-2x">
-					    	<i class="fa fa-users fa-stack-1x fa"></i>
-					    </span>4 members
-					</div>
-				</div>
-					<div class="col-md-8 col-md-offset-2" style="padding-top: 80px">
-						<div class="col-md-4">
-					        <img class="img-fluid" style="max-width: 110%" src="img/st/reach2.png" alt="">    
-					    </div> 
-					    <div class="col-md-4">
-					        <img class="img-fluid" style="max-width: 80%" src="img/st/logo-tue.png" alt="">           
-					    </div> 
-					    <div class="col-md-4">
-					        <img class="img-fluid" style="max-width: 110%" src="img/st/tum.png" alt="">       
+					<div class="row" style="margin-top: 50px">
+						<div class="col-md-12 col-md-offset-0" style="padding-top: 10px">
+							<div class="col-md-4">
+							    <a href="#"><img class="img-fluid" style="max-width: 110%" src="img/st/reach2.png" alt=""></a>   
+							</div> 
+							<div class="col-md-4">
+							     <a href="#"><img class="img-fluid" style="max-width: 80%" src="img/st/logo-tue.png" alt=""></a>          
+							</div> 
+							<div class="col-md-4">
+							     <a href="#"><img class="img-fluid" style="max-width: 110%" src="img/st/tum.png" alt=""></a>       
+							</div>
 						</div>
 					</div>
+					<a style="margin-top: 80px" href="#challenge" class="btn btn-circle page-scroll">
+						<i class="fa fa-angle-double-down animated"></i>
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
 </header>
 
+
 <!-- Summary Section -->
-<aside id="overview" class="bgblue">
+<section id="challenge" class="bg-white">
 	<div class="container content-section text-center">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h1 class="text-center" style="color:white; font-weight: normal">Challenge</h1>
-				<h2 class="project-description text-left" style="color:white; padding-top: 20px">
-					Design a <strong class="hlw">digital prototype</strong><br><br>for a target group of <strong class="hlw">seniors</strong><br><br>that <strong class="hlw">facilitates</strong> food-related activities<br><br>using an <strong class="hlw">interactive table</strong>.
+				<h1 class="text-center" style="color:black; font-weight: normal">Challenge</h1>
+				<h2 class="project-description text-left" style="color:black; padding-top: 20px">
+					Design a <strong class="hlw">digital prototype</strong><br><br>that <strong class="hlw">facilitates</strong> food-related activities<br><br>for a target group of <strong class="hlw">seniors</strong><!--br><br>using an <strong class="hlw">interactive table</strong-->.
 				</h2>
-				<a style="margin-top: 20px" href="#overview" class="btn btn-circle page-scroll">
-					<i class="fa fa-angle-double-down animated"></i>
-				</a>
+			</div>
+		</div>
+		<a style="margin-top: 80px" href="#challenge" class="btn btn-circle page-scroll">
+			<i class="fa fa-angle-double-down animated" style="color:black"></i>
+		</a>	
+	</div>
+</section>
+
+
+
+<!-- Process Section -->
+<section id="process" class="bgblue">
+	<div class="container content-section text-center">
+		<div class="row">
+			<div class="col-md-12 col-md-offset-0">
+				<h1 class="service-heading text-center" style="color:white; font-weight: normal; padding-top: 60px">Process Overview</h1>
+				<div class="row">
+					<div class="col-md-10 col-md-offset-1" style="padding-top: 10px">
+						<div class="col-md-4">
+					    <span class="fa-stack fa-3x">
+					       	<i class="fa fa-circle fa-stack-2x text-primary"></i>
+					    	<i class="fa fa-users fa-stack-1x fa"></i>
+					    </span>
+					    <h4 class="service-heading" style="color:white; padding-top: 20px">Research</h4>
+					    <p style="color:white">Contextual Inquiry, Interview, Task Analysis, Affinity Diagram, Benchmarking</p>
+					</div> 
+					<div class="col-md-4">
+					    <span class="fa-stack fa-3x">
+					     	<i class="fa fa-circle fa-stack-2x text-primary"></i>
+					        <i class="fa fa-lightbulb-o fa-stack-1x fa"></i>
+					    </span>
+					    <h4 class="service-heading" style="color:white; padding-top: 20px">Define & Ideate</h4>
+					    <p style="color:white">Problem statement, Mapping, Crazy 8s, Sketch, Storyboard</p>
+					</div>
+					<div class="col-md-4">
+					    <span class="fa-stack fa-3x">
+					        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+					        <i class="fa fa-rocket fa-stack-1x fa"></i>
+					    </span>
+					   	<h4 class="service-heading" style="color:white; padding-top: 20px">Prototype & Test</h4>
+					    <p style="color:white">Wireframing, Powerpoint, Wizard of Oz, Usability Testing</p>
+					</div>
+					</div>
+				</div>
 			</div>
 		</div>	
 	</div>
-</aside>
+</section>
 
-<!-- Summary Section -->
-<section id="processoverview">
-	<div class="container content-section text-center">
-		<div class="col-md-8 col-md-offset-2">
-			<div class="row" style="padding-top: 50px">
-				<h2>Process Overview</h2>
+
+<!--section id="pics" class="bg-white">
+	<div class="row no-gutter popup-gallery">
+		<div class="row">
+			<div class="col-lg-8 col-lg-offset-2">
+		          	<div class="col-sm-4">
+		            	<a class="portfolio-box" href="#">
+			              	<img class="img-fluid" src="img/st/tb.jpg" alt="">
+			              	<div class="portfolio-box-caption">
+			                	<div class="portfolio-box-caption-content">
+			                	</div>
+			              	</div>
+		            	</a>	
+		          	</div>
+		          	<div class="col-sm-4">
+		            	<a class="portfolio-box" href="#">
+			              	<img class="img-fluid" src="img/st/tb.jpg" alt="">
+			              	<div class="portfolio-box-caption">
+			                	<div class="portfolio-box-caption-content">
+			                	</div>
+			              	</div>
+		            	</a>	
+		          	</div>
+		          	<div class="col-sm-4">
+		            	<a class="portfolio-box" href="#">
+			              	<img class="img-fluid" src="img/st/tb.jpg" alt="">
+			              	<div class="portfolio-box-caption">
+			                	<div class="portfolio-box-caption-content">
+			                	</div>
+			              	</div>
+		            	</a>	
+		          	</div>
 			</div>
-			<div class="row" style="padding-top: 20px">  
-				<div class="col-md-4">
-				    <span class="fa-stack fa-3x">
-				       	<i class="fa fa-circle fa-stack-2x text-primary"></i>
-				    	<i class="fa fa-users fa-stack-1x fa"></i>
-				    </span>
-				    <h4 class="service-heading">Research</h4>
-				    <p class="text-muted">Contextual Inquiry, Interview, Task Analysis, Affinity Diagram, Benchmarking</p>
-				</div> 
-				<div class="col-md-4">
-				    <span class="fa-stack fa-3x">
-				     	<i class="fa fa-circle fa-stack-2x text-primary"></i>
-				        <i class="fa fa-lightbulb-o fa-stack-1x fa"></i>
-				    </span>
-				    <h4 class="service-heading">Define & Ideate</h4>
-				    <p class="text-muted">Problem statement, Mapping, Crazy 8s, Sketch, Storyboard</p>
-				</div>
-				<div class="col-md-4">
-				    <span class="fa-stack fa-3x">
-				        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-				        <i class="fa fa-rocket fa-stack-1x fa"></i>
-				    </span>
-				   	<h4 class="service-heading">Prototype & Test</h4>
-				    <p class="text-muted">Wireframing, Powerpoint, Wizard of Oz, Usability Testing</p>
-				</div>
-			</div> 
 		</div>
 	</div>
-</section>
+</section-->
 
 <!-- User Research Section -->
 <section id="single-project" class="bg-white">
@@ -199,6 +231,49 @@
 	</div>
 </section>
 
+<!-- Summary Section -->
+<aside id="overview" class="bgblue">
+	<div class="container content-section text-center">
+		<div class="row">
+			<div class="col-md-10 col-md-offset-1">
+				<h1 class="text-center" style="color:white; font-weight: normal">Overview</h1>
+				<div class = "row">
+					<div class="col-sm-6">
+						<span class="fa-stack fa-3x">
+					    	<i class="fa fa-calendar fa-stack-1x fa"></i>
+					    </span>
+					    <span>
+					    	July '17 (4 weeks)
+					    </span>
+					</div>
+					<div class="col-sm-6">
+						<span class="fa-stack fa-3x">
+					    	<i class="fa fa-users fa-stack-1x fa"></i>
+					    </span>
+					    <span>
+					    	4 members
+					    </p>
+					</div>
+				</div>
+				<h4 class="service-heading text-center" style="color:white; font-weight: normal; padding-top: 60px">Stakeholders</h4>
+				<div class="row">
+					<div class="col-md-10 col-md-offset-1" style="padding-top: 10px">
+						<div class="col-md-4">
+						    <img class="img-fluid" style="max-width: 110%" src="img/st/reach2.png" alt="">    
+						</div> 
+						<div class="col-md-4">
+						    <img class="img-fluid" style="max-width: 80%" src="img/st/logo-tue.png" alt="">           
+						</div> 
+						<div class="col-md-4">
+						    <img class="img-fluid" style="max-width: 110%" src="img/st/tum.png" alt="">       
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>	
+
+	</div>
+</aside>
 
 <!-- Portfolio Grid Section -->
 <section id="portfolio" class="p-0">
