--- a/aac.html
+++ b/aac.html
@@ -40,13 +40,13 @@
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
 			<i class="fa fa-bars"></i>
 			</button>
-			<a class="navbar-brand page-scroll" href="index.html">Daniel Mariano</a>
+			
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 			<ul class="nav navbar-nav">
 				<li>
-					<a class="page-scroll" href="#single-project">Description</a>
+					<a href="index.html">Home</a>
 				</li>			
 				<li>
 					<a class="page-scroll" href="#portfolio">Portfolio</a>
@@ -57,9 +57,7 @@
 				<li>
 					<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0">CV</a>
 				</li>
-				<li>
-					<a href="index.html">Home</a>
-				</li>
+				
 			</ul>
 		</div>
 		<!-- /.navbar-collapse -->
@@ -75,7 +73,7 @@
 				<div class="col-md-8 col-md-offset-2">
 					<h1 class="brand-heading">AAC for people with severe motor dysfunction</h1>
 					<p class="intro-text">ALS, AAC, Prototyping, User Testing, Data Analysis</p>
-					<a style="margin-top: 120px" href="#single-project" class="btn btn-circle page-scroll">
+					<a style="margin-top: 217px" href="#challenge" class="btn btn-circle page-scroll">
 					<i class="fa fa-angle-double-down animated"></i>
 					</a>
 				</div>
@@ -84,11 +82,25 @@
 	</div>
 </header>
 
-<!-- Project Details Section -->
-<section id="single-project" class="bg-white">
+<!-- Challenge Section -->
+<section id="challenge" class="bg-black">
 	<div class="container content-section text-center">
 		<div class="row">
-			<h2>Summary</h2>
+			<div class="col-md-8 col-md-offset-2">
+				<h1 class="text-center" style="color:white; font-weight: normal">Challenge</h1>
+				<h2 class="project-description text-left" style="color:white; padding-top: 20px">
+					Design new features for a <strong class="hlw">software</strong><br><br>that supports <strong class="hlw">communication</strong> for<br><br>users with <strong class="hlw">severe motor dysfunction</strong>
+				</h2>
+			</div>
+		</div>
+	</div>
+</section>
+
+<!-- Summary Section -->
+<section id="summary" class="bg-white">
+	<div class="container content-section text-center">
+		<div class="row">
+			<h1>Summary</h1>
 			<div class="col-lg-8 col-lg-offset-2">
 				<p class="text-left">
 					<b>Date:</b> January 2014 - July 2015<br>
@@ -106,13 +118,135 @@
 	</div>
 </section>
 
+<!-- Process Section -->
+<section id="process-ov" class="bg-black">
+	<div class="container content-section text-center">
+		<div class="row">
+			<div class="col-md-12 col-md-offset-0">
+				<h1 class="service-heading text-center" style="color:white; font-weight: normal; padding-top: 60px">Methods Overview</h1>
+				<div class="row">
+					<div class="col-md-10 col-md-offset-1" style="padding-top: 10px">
+						<div class="col-md-4">
+					    <span class="fa-stack fa-3x">
+					       	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
+					    	<i class="fa fa-users fa-stack-1x fa"></i>
+					    </span>
+					    <h4 class="service-heading" style="color:white; padding-top: 20px">Research</h4>
+					    <p style="color:#bbb">Contextual Inquiry, Task Analysis, Expert Review, Benchmarking</p>
+					</div> 
+					<div class="col-md-4">
+					    <span class="fa-stack fa-3x">
+					     	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
+					        <i class="fa fa-lightbulb-o fa-stack-1x fa"></i>
+					    </span>
+					    <h4 class="service-heading" style="color:white; padding-top: 20px">Define & Ideate</h4>
+					    <p style="color:#bbb">Problem statement, Sketching</p>
+					</div>
+					<div class="col-md-4">
+					    <span class="fa-stack fa-3x">
+					        <i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
+					        <i class="fa fa-rocket fa-stack-1x fa"></i>
+					    </span>
+					   	<h4 class="service-heading" style="color:white; padding-top: 20px">Prototype & Test</h4>
+					    <p style="color:#bbb">WPF Prototype, Usability Testing, Data Analysis</p>
+					</div>
+					</div>
+				</div>
+			</div>
+		</div>	
+	</div>
+</section>
+
+<!-- User Research Section -->
+<section id="process-dt" class="bg-white">
+	<div class="container content-section text-center">
+		<div class="row" style="padding-top: 45px">
+			<h1 class="service-heading text-center" style="padding-top: 60px">Process</h1>
+			...
+			<!--div class="col-lg-8 col-lg-offset-2">
+				<p class="text-left">The target users of this project were seniors (+65) who are lonely and are sedentary. Home care, care home, rehabilitation facilities and hospitals are settings that these users belong. The first step was to visit them in a weekly exercise where they perform a shared cooking activity.</p>
+				<img class="img-fluid" src="img/st/userresearch.jpg" alt="">
+			</div-->
+		</div>
+		<!--div class="row" style="padding-top: 45px">
+			<div class="col-lg-8 col-lg-offset-2">
+				<p class="text-left">After the inverviews, all information was clustered with an Affinity Diagram. From the AD, interesting insights about seniors view on different subjects, such as healthy eating, cooking, technology acceptance and socialization.</p>
+				<img class="img-fluid" src="img/st/map2.jpg" alt="">
+			</div>
+		</div>
+		<div class="row" style="padding-top: 45px">
+			<h2>Ideation</h2>
+			<div class="col-lg-8 col-lg-offset-2">
+				<p class="text-left">To continue the design process after the user research, the group decided to use the design sprint methodolog. A problem statement and long term goal were defined. We've mapped the problem in order to understand the relationship of different actors during different stages of the process and as a result we got a couple of possible approachs for the project. </p>
+				<img class="img-fluid" src="img/st/ideation.jpg" alt="">
+			</div>
+		</div>
+		<div class="row" style="padding-top: 45px">
+			<h2>User Test</h2>
+			<div class="col-lg-8 col-lg-offset-2">
+				<img class="img-fluid" src="img/st/usertest.jpg" alt="">
+			</div>
+		</div>
+		<div class="row" style="padding-top: 45px">
+			<h2>Conclusion</h2>
+			<div class="col-lg-8 col-lg-offset-2">
+				<p>Bladiblah!</p>
+			</div>
+		</div-->
+	</div>
+</section>
+
+<!-- Summary Section -->
+<!--aside id="overview" class="bgblue">
+	<div class="container content-section text-center">
+		<div class="row">
+			<div class="col-md-10 col-md-offset-1">
+				<h1 class="text-center" style="color:white; font-weight: normal">Overview</h1>
+				<div class = "row">
+					<div class="col-sm-6">
+						<span class="fa-stack fa-3x">
+					    	<i class="fa fa-calendar fa-stack-1x fa"></i>
+					    </span>
+					    <span>
+					    	July '17 (4 weeks)
+					    </span>
+					</div>
+					<div class="col-sm-6">
+						<span class="fa-stack fa-3x">
+					    	<i class="fa fa-users fa-stack-1x fa"></i>
+					    </span>
+					    <span>
+					    	4 members
+					    </p>
+					</div>
+				</div>
+				<h4 class="service-heading text-center" style="color:white; font-weight: normal; padding-top: 60px">Stakeholders</h4>
+				<div class="row">
+					<div class="col-md-10 col-md-offset-1" style="padding-top: 10px">
+						<div class="col-md-4">
+						    <img class="img-fluid" style="max-width: 110%" src="img/st/reach2.png" alt="">    
+						</div> 
+						<div class="col-md-4">
+						    <img class="img-fluid" style="max-width: 80%" src="img/st/logo-tue.png" alt="">           
+						</div> 
+						<div class="col-md-4">
+						    <img class="img-fluid" style="max-width: 110%" src="img/st/tum.png" alt="">       
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>	
+
+	</div>
+</aside-->
+
 <!-- Portfolio Grid Section -->
-<section id="portfolio" class="p-0">
+<section id="portfolio" class="bg-black">
     <div class="container content-section text-center">
     	<div class="row">
-    		<h2>Portfolio</h2>
+    		<h1 style="color:white; font-weight: normal">Looking for other projects?</h1>
        		<div class="col-lg-8 col-lg-offset-2">
-      			<p style="margin-bottom: 30px">These are some of the works that I've been working recently.</p>
+      			<p style="margin-bottom: 30px; color:white">These are some of the works that I've been working recently.</p>
        		</div>
 	        <div class="row no-gutter popup-gallery">
 	          	<div class="col-sm-6">
@@ -128,8 +262,8 @@
 		                  		</div-->
 		                	</div>
 		              	</div>
-		              	<h4 class="projname">Smart Table for Seniors</h4>
-		                <h6 class="projdesc">Seniors, Smart-Table, IoT</h6>
+		              	<h4 class="projname-black">Smart Table for Seniors</h4>
+		                <h6 class="projdesc-black">Seniors, Smart-Table, IoT</h6>
 	            	</a>	
 	          	</div>
 		        <div class="col-sm-6">
@@ -145,8 +279,8 @@
 		                  		</div-->
 		                	</div>
 		             	 </div>
-		             	<h4 class="projname">Dashboard for Researchers</h4>
-		                <h6 class="projdesc">Data Analysis, Visualization, IoT, Wearables</h6>
+		             	<h4 class="projname-black">Dashboard for Researchers</h4>
+		                <h6 class="projdesc-black">Data Analysis, Visualization, IoT, Wearables</h6>
 		            </a>
 		        </div>
 		    </div>
@@ -164,8 +298,8 @@
 			                  		</div-->
 			                	</div>
 			             	 </div>
-			             	 <h4 class="projname">AAC for people with severe motor dysfunction</h4>
-		              		 <h6 class="projdesc">ALS, AAC, Prototyping, User Testing, Data Analysis</h6>
+			             	 <h4 class="projname-black">AAC for people with severe motor dysfunction</h4>
+		              		 <h6 class="projdesc-black">ALS, AAC, Prototyping, User Testing, Data Analysis</h6>
 			            </a>
 			    </div>
 		        <div class="col-sm-6">
@@ -181,8 +315,8 @@
 		                  		</div>
 		                	</div-->
 		              	</div>
-		              	<h4 class="projname">Multi-patient vital signs monitoring center for ICU's</h4>
-		              	<h6 class="projdesc">User Interface, Healthcare, IOT</h6>
+		              	<h4 class="projname-black">Multi-patient vital signs monitoring center for ICU's</h4>
+		              	<h6 class="projdesc-black">User Interface, Healthcare, IOT</h6>
 		            </a>
 		        </div>
 		    </div>
@@ -195,8 +329,8 @@
 	<div class="container content-section text-center">
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
-				<h2>Let's get in touch</h2>
-				<p>Are you interested in my work?<br>Send me a message!</p>
+				<h1>Let's get in touch</h1>
+				<p>Send me a message!</p>
 				<a href="mailto:dtgmariano@gmail.com" class="btnghost"><i class="fa fa-envelope"></i> dtgmariano@gmail.com</a>
 				<p></p>
 				<ul class="list-inline banner-social-buttons">
