--- a/st2.html
+++ b/st2.html
@@ -40,13 +40,13 @@
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
 			<i class="fa fa-bars"></i>
 			</button>
-			<a class="navbar-brand page-scroll" href="index.html">Daniel Mariano</a>
+			
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 			<ul class="nav navbar-nav">
 				<li>
-					<a class="page-scroll" href="#single-project">Description</a>
+					<a href="index.html">Home</a>
 				</li>			
 				<li>
 					<a class="page-scroll" href="#portfolio">Portfolio</a>
@@ -57,9 +57,7 @@
 				<li>
 					<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0">CV</a>
 				</li>
-				<li>
-					<a href="index.html">Home</a>
-				</li>
+				
 			</ul>
 		</div>
 		<!-- /.navbar-collapse -->
@@ -68,27 +66,15 @@
 </nav>
 
 <!-- Intro Header -->
-<header class="intro st" style="padding-top: 40px; padding-bottom: 50px">
+<header class="intro st">
 	<div class="intro-body">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
-					<h1 class="brand-heading text-left">Engage seniors<br>to (re)establish<br>food-related habits</h1>
-					<div class="row" style="margin-top: 50px">
-						<div class="col-md-12 col-md-offset-0" style="padding-top: 10px">
-							<div class="col-md-4">
-							    <a href="#"><img class="img-fluid" style="max-width: 110%" src="img/st/reach2.png" alt=""></a>   
-							</div> 
-							<div class="col-md-4">
-							     <a href="#"><img class="img-fluid" style="max-width: 80%" src="img/st/logo-tue.png" alt=""></a>          
-							</div> 
-							<div class="col-md-4">
-							     <a href="#"><img class="img-fluid" style="max-width: 110%" src="img/st/tum.png" alt=""></a>       
-							</div>
-						</div>
-					</div>
-					<a style="margin-top: 80px" href="#challenge" class="btn btn-circle page-scroll">
-						<i class="fa fa-angle-double-down animated"></i>
+					<h1 class="brand-heading">Engage seniors<br>to (re)establish<br>food-related habits</h1>
+					<p class="intro-text">Interactive-Table, Cooking Aid, Prototype, User Test</p>
+					<a style="margin-top: 217px" href="#challenge" class="btn btn-circle page-scroll">
+					<i class="fa fa-angle-double-down animated"></i>
 					</a>
 				</div>
 			</div>
@@ -96,57 +82,72 @@
 	</div>
 </header>
 
-
-<!-- Summary Section -->
-<section id="challenge" class="bg-white">
+<!-- Challenge Section -->
+<section id="challenge" class="bg-black">
 	<div class="container content-section text-center">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h1 class="text-center" style="color:black; font-weight: normal">Challenge</h1>
-				<h2 class="project-description text-left" style="color:black; padding-top: 20px">
+				<h1 class="text-center" style="color:white; font-weight: normal">Challenge</h1>
+				<h2 class="project-description text-left" style="color:white; padding-top: 20px">
 					Design a <strong class="hlw">digital prototype</strong><br><br>that <strong class="hlw">facilitates</strong> food-related activities<br><br>for a target group of <strong class="hlw">seniors</strong><!--br><br>using an <strong class="hlw">interactive table</strong-->.
 				</h2>
 			</div>
 		</div>
-		<a style="margin-top: 80px" href="#challenge" class="btn btn-circle page-scroll">
-			<i class="fa fa-angle-double-down animated" style="color:black"></i>
-		</a>	
 	</div>
 </section>
 
-
+<!-- Summary Section -->
+<section id="summary" class="bg-white">
+	<div class="container content-section text-center">
+		<div class="row">
+			<h1 style="font-weight: normal">Summary</h1>
+			<div class="col-lg-8 col-lg-offset-2">
+				<p class="text-left">
+					<b>Date:</b> July 2017<br>
+					<b>Clients:</b> Reach 2020 European Consortium, Eindhoven University of Technology (The, Netherlands), Technical University of Munich (Germany)<br>
+					<b>Service:</b> User research, digital prototype<br>
+					<b>Team size:</b> 4 members working directly<br>
+					<b>Duration:</b> 4 weeks<br>
+					<br>
+					<b>My roles:</b> ...<br><br>
+					<b>Results:</b> ...
+				</p>
+			</div>
+		</div>
+	</div>
+</section>
 
 <!-- Process Section -->
-<section id="process" class="bgblue">
+<section id="process-ov" class="bg-black">
 	<div class="container content-section text-center">
 		<div class="row">
 			<div class="col-md-12 col-md-offset-0">
-				<h1 class="service-heading text-center" style="color:white; font-weight: normal; padding-top: 60px">Process Overview</h1>
+				<h1 class="service-heading text-center" style="color:white; font-weight: normal; padding-top: 60px">Methods Overview</h1>
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1" style="padding-top: 10px">
 						<div class="col-md-4">
 					    <span class="fa-stack fa-3x">
-					       	<i class="fa fa-circle fa-stack-2x text-primary"></i>
+					       	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
 					    	<i class="fa fa-users fa-stack-1x fa"></i>
 					    </span>
 					    <h4 class="service-heading" style="color:white; padding-top: 20px">Research</h4>
-					    <p style="color:white">Contextual Inquiry, Interview, Task Analysis, Affinity Diagram, Benchmarking</p>
+					    <p style="color:#bbb">Contextual Inquiry, Interview, Task Analysis, Affinity Diagram, Benchmarking</p>
 					</div> 
 					<div class="col-md-4">
 					    <span class="fa-stack fa-3x">
-					     	<i class="fa fa-circle fa-stack-2x text-primary"></i>
+					     	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
 					        <i class="fa fa-lightbulb-o fa-stack-1x fa"></i>
 					    </span>
 					    <h4 class="service-heading" style="color:white; padding-top: 20px">Define & Ideate</h4>
-					    <p style="color:white">Problem statement, Mapping, Crazy 8s, Sketch, Storyboard</p>
+					    <p style="color:#bbb">Problem statement, Mapping, Crazy 8s, Sketch, Storyboard</p>
 					</div>
 					<div class="col-md-4">
 					    <span class="fa-stack fa-3x">
-					        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+					        <i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
 					        <i class="fa fa-rocket fa-stack-1x fa"></i>
 					    </span>
 					   	<h4 class="service-heading" style="color:white; padding-top: 20px">Prototype & Test</h4>
-					    <p style="color:white">Wireframing, Powerpoint, Wizard of Oz, Usability Testing</p>
+					    <p style="color:#bbb">Wireframing, Powerpoint, Wizard of Oz, Usability Testing</p>
 					</div>
 					</div>
 				</div>
@@ -155,55 +156,18 @@
 	</div>
 </section>
 
-
-<!--section id="pics" class="bg-white">
-	<div class="row no-gutter popup-gallery">
-		<div class="row">
-			<div class="col-lg-8 col-lg-offset-2">
-		          	<div class="col-sm-4">
-		            	<a class="portfolio-box" href="#">
-			              	<img class="img-fluid" src="img/st/tb.jpg" alt="">
-			              	<div class="portfolio-box-caption">
-			                	<div class="portfolio-box-caption-content">
-			                	</div>
-			              	</div>
-		            	</a>	
-		          	</div>
-		          	<div class="col-sm-4">
-		            	<a class="portfolio-box" href="#">
-			              	<img class="img-fluid" src="img/st/tb.jpg" alt="">
-			              	<div class="portfolio-box-caption">
-			                	<div class="portfolio-box-caption-content">
-			                	</div>
-			              	</div>
-		            	</a>	
-		          	</div>
-		          	<div class="col-sm-4">
-		            	<a class="portfolio-box" href="#">
-			              	<img class="img-fluid" src="img/st/tb.jpg" alt="">
-			              	<div class="portfolio-box-caption">
-			                	<div class="portfolio-box-caption-content">
-			                	</div>
-			              	</div>
-		            	</a>	
-		          	</div>
-			</div>
-		</div>
-	</div>
-</section-->
-
 <!-- User Research Section -->
-<section id="single-project" class="bg-white">
+<section id="process-dt" class="bg-white">
 	<div class="container content-section text-center">
-		
 		<div class="row" style="padding-top: 45px">
-			<h2>User Research</h2>
-			<div class="col-lg-8 col-lg-offset-2">
+			<h1 class="service-heading text-center" style="font-weight: normal; padding-top: 60px">Process</h1>
+			...
+			<!--div class="col-lg-8 col-lg-offset-2">
 				<p class="text-left">The target users of this project were seniors (+65) who are lonely and are sedentary. Home care, care home, rehabilitation facilities and hospitals are settings that these users belong. The first step was to visit them in a weekly exercise where they perform a shared cooking activity.</p>
 				<img class="img-fluid" src="img/st/userresearch.jpg" alt="">
-			</div>
+			</div-->
 		</div>
-		<div class="row" style="padding-top: 45px">
+		<!--div class="row" style="padding-top: 45px">
 			<div class="col-lg-8 col-lg-offset-2">
 				<p class="text-left">After the inverviews, all information was clustered with an Affinity Diagram. From the AD, interesting insights about seniors view on different subjects, such as healthy eating, cooking, technology acceptance and socialization.</p>
 				<img class="img-fluid" src="img/st/map2.jpg" alt="">
@@ -227,12 +191,12 @@
 			<div class="col-lg-8 col-lg-offset-2">
 				<p>Bladiblah!</p>
 			</div>
-		</div>
+		</div-->
 	</div>
 </section>
 
 <!-- Summary Section -->
-<aside id="overview" class="bgblue">
+<!--aside id="overview" class="bgblue">
 	<div class="container content-section text-center">
 		<div class="row">
 			<div class="col-md-10 col-md-offset-1">
@@ -273,15 +237,15 @@
 		</div>	
 
 	</div>
-</aside>
+</aside-->
 
 <!-- Portfolio Grid Section -->
-<section id="portfolio" class="p-0">
+<section id="portfolio" class="bg-black">
     <div class="container content-section text-center">
     	<div class="row">
-    		<h2>Looking for other projects?</h2>
+    		<h1 style="color:white; font-weight: normal">Looking for other projects?</h1>
        		<div class="col-lg-8 col-lg-offset-2">
-      			<p style="margin-bottom: 30px">These are some of the works that I've been working recently.</p>
+      			<p style="margin-bottom: 30px; color:white">These are some of the works that I've been working recently.</p>
        		</div>
 	        <div class="row no-gutter popup-gallery">
 	          	<div class="col-sm-6">
@@ -297,8 +261,8 @@
 		                  		</div-->
 		                	</div>
 		              	</div>
-		              	<h4 class="projname">Smart Table for Seniors</h4>
-		                <h6 class="projdesc">Seniors, Smart-Table, IoT</h6>
+		              	<h4 class="projname-black">Smart Table for Seniors</h4>
+		                <h6 class="projdesc-black">Seniors, Smart-Table, IoT</h6>
 	            	</a>	
 	          	</div>
 		        <div class="col-sm-6">
@@ -314,8 +278,8 @@
 		                  		</div-->
 		                	</div>
 		             	 </div>
-		             	<h4 class="projname">Dashboard for Researchers</h4>
-		                <h6 class="projdesc">Data Analysis, Visualization, IoT, Wearables</h6>
+		             	<h4 class="projname-black">Dashboard for Researchers</h4>
+		                <h6 class="projdesc-black">Data Analysis, Visualization, IoT, Wearables</h6>
 		            </a>
 		        </div>
 		    </div>
@@ -333,8 +297,8 @@
 			                  		</div-->
 			                	</div>
 			             	 </div>
-			             	 <h4 class="projname">AAC for people with severe motor dysfunction</h4>
-		              		 <h6 class="projdesc">ALS, AAC, Prototyping, User Testing, Data Analysis</h6>
+			             	 <h4 class="projname-black">AAC for people with severe motor dysfunction</h4>
+		              		 <h6 class="projdesc-black">ALS, AAC, Prototyping, User Testing, Data Analysis</h6>
 			            </a>
 			    </div>
 		        <div class="col-sm-6">
@@ -350,8 +314,8 @@
 		                  		</div>
 		                	</div-->
 		              	</div>
-		              	<h4 class="projname">Multi-patient vital signs monitoring center for ICU's</h4>
-		              	<h6 class="projdesc">User Interface, Healthcare, IOT</h6>
+		              	<h4 class="projname-black">Multi-patient vital signs monitoring center for ICU's</h4>
+		              	<h6 class="projdesc-black">User Interface, Healthcare, IOT</h6>
 		            </a>
 		        </div>
 		    </div>
@@ -364,8 +328,8 @@
 	<div class="container content-section text-center">
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
-				<h2>Let's get in touch</h2>
-				<p>Are you interested in my work?<br>Send me a message!</p>
+				<h1>Let's get in touch</h1>
+				<p>Send me a message!</p>
 				<a href="mailto:dtgmariano@gmail.com" class="btnghost"><i class="fa fa-envelope"></i> dtgmariano@gmail.com</a>
 				<p></p>
 				<ul class="list-inline banner-social-buttons">
