reducing img quality

--- a/aac.html
+++ b/aac.html
@@ -132,7 +132,7 @@
 					    	<i class="fa fa-users fa-stack-1x fa"></i>
 					    </span>
 					    <h4 class="service-heading" style="color:white; padding-top: 20px">Research</h4>
-					    <p style="color:#bbb">Contextual Inquiry, Task Analysis, Expert Review, Benchmarking</p>
+					    <p style="color:#bbb">Task Analysis, Expert Review, Benchmarking</p>
 					</div> 
 					<div class="col-md-4">
 					    <span class="fa-stack fa-3x">
