--- a/st2.html
+++ b/st2.html
@@ -89,7 +89,7 @@
 			<div class="col-md-8 col-md-offset-2">
 				<h1 class="text-center" style="color:white; font-weight: normal">Challenge</h1>
 				<h2 class="project-description text-left" style="color:white; padding-top: 20px">
-					Design a <strong class="hlw">digital prototype</strong><br><br>that <strong class="hlw">facilitates</strong> food-related activities<br><br>for a target group of <strong class="hlw">seniors</strong><!--br><br>using an <strong class="hlw">interactive table</strong-->.
+					Design a <strong class="hlw">digital prototype</strong><br><br>that <strong class="hlw">facilitates</strong> food-related activities<br><br>for a specific group of <strong class="hlw">seniors</strong><!--br><br>using an <strong class="hlw">interactive table</strong-->.
 				</h2>
 			</div>
 		</div>
