last adjust colors bg

--- a/st2.html
+++ b/st2.html
@@ -195,6 +195,15 @@
 	</div>
 </section>
 
+<section id="results" class="bg-black">
+	<div class="container content-section text-center">
+		<div class="row" style="padding-top: 45px">
+			<h1 class="service-heading text-center" style="color: white; font-weight: normal; padding-top: 60px">Results</h1>
+			<p style="color: white">...</p>
+		</div>
+	</div>
+</section>
+
 <!-- Summary Section -->
 <!--aside id="overview" class="bgblue">
 	<div class="container content-section text-center">
@@ -240,84 +249,62 @@
 </aside-->
 
 <!-- Portfolio Grid Section -->
-<section id="portfolio" class="bg-black">
+<section id="portfolio" class="bg-white p-0">
     <div class="container content-section text-center">
     	<div class="row">
-    		<h1 style="color:white; font-weight: normal">Looking for other projects?</h1>
+    		<h1>Portfolio</h1>
        		<div class="col-lg-8 col-lg-offset-2">
-      			<p style="margin-bottom: 30px; color:white">These are some of the works that I've been working recently.</p>
+      			<p style="margin-bottom: 30px">These are some of the works that I've been working recently.</p>
        		</div>
 	        <div class="row no-gutter popup-gallery">
 	          	<div class="col-sm-6">
-	            	<a class="portfolio-box" href="#">
+	            	<a class="portfolio-box" href="st2.html">
 		              	<img class="img-fluid" src="img/st/tb.jpg" alt="">
 		              	<div class="portfolio-box-caption">
 		                	<div class="portfolio-box-caption-content">
-		                  		<!--div class="project-category text-faded">
-		                    		Seniors, Smart-Table, IoT
-		                  		</div>
-		                  		<div class="project-name">
-		                    		Smart Table for Seniors
-		                  		</div-->
+		                		<h4 class="projname">Engage seniors to (re)establish food-related habits</h4>
+		                		<h6 class="projdesc">Interactive-Table, Cooking Aid, Prototype, User Test</h6>
 		                	</div>
-		              	</div>
-		              	<h4 class="projname-black">Smart Table for Seniors</h4>
-		                <h6 class="projdesc-black">Seniors, Smart-Table, IoT</h6>
+		             	 </div>
+		              	
 	            	</a>	
 	          	</div>
 		        <div class="col-sm-6">
-		            <a class="portfolio-box" href="#">
+		            <a class="portfolio-box">
 		              	<img class="img-fluid" src="img/db/tb.png" alt="">
 		              	<div class="portfolio-box-caption">
 		                	<div class="portfolio-box-caption-content">
-		                  		<!--div class="project-category text-faded">
-		                    		Data Analysis, Visualization, IoT, Wearables
-		                  		</div>
-		                  		<div class="project-name">
-		                    		Dashboard for Researchers
-		                  		</div-->
+		                		<h4 class="projname">Dashboard for Researchers</h4>
+		                		<h6 class="projdesc">IoT, Wearables, Data Analysis, Visualization</h6>
 		                	</div>
 		             	 </div>
-		             	<h4 class="projname-black">Dashboard for Researchers</h4>
-		                <h6 class="projdesc-black">Data Analysis, Visualization, IoT, Wearables</h6>
+		             	
 		            </a>
 		        </div>
 		    </div>
-		    <div class="row no-gutter popup-gallery">
+		    <div class="row no-gutter popup-gallery" style="padding-top: 30px">
 			    <div class="col-sm-6">
 			            <a class="portfolio-box" href="aac.html">
 			              	<img class="img-fluid" src="img/aac/tb.png" alt="">
 			              	<div class="portfolio-box-caption">
 			                	<div class="portfolio-box-caption-content">
-			                  		<!--div class="project-category text-faded">
-			                    		ALS Patients, Augmentative and Alternative Communication, Wearables
-			                  		</div>
-			                  		<div class="project-name">
-			                    		Alternative Communication for people with Severe Motor Dysfunction
-			                  		</div-->
+			                		<h4 class="projname">AAC for people with severe motor dysfunction</h4>
+		              		 		<h6 class="projdesc">ALS, AAC, .NET-based Prototype, User Test, Data Analysis</h6>
 			                	</div>
 			             	 </div>
-			             	 <h4 class="projname-black">AAC for people with severe motor dysfunction</h4>
-		              		 <h6 class="projdesc-black">ALS, AAC, Prototyping, User Testing, Data Analysis</h6>
 			            </a>
 			    </div>
 		        <div class="col-sm-6">
-		            <a class="portfolio-box" href="#">
+		            <a class="portfolio-box">
 		              	<img class="img-fluid" src="img/icu/tb.png" alt="">
 		              	<div class="portfolio-box-caption">
-		                	<!--div class="portfolio-box-caption-content">
-		                  		<div class="project-category text-faded">
-		                    		User Interface, Healthcare, IOT
-		                  		</div>
-		                  		<div class="project-name">
-		                    		Multi-patient vital signs monitoring center for ICU's
-		                  		</div>
-		                	</div-->
-		              	</div>
-		              	<h4 class="projname-black">Multi-patient vital signs monitoring center for ICU's</h4>
-		              	<h6 class="projdesc-black">User Interface, Healthcare, IOT</h6>
-		            </a>
-		        </div>
+			                <div class="portfolio-box-caption-content">
+			                	<h4 class="projname">Multi-patient vital signs monitoring center for ICU's</h4>
+		              			<h6 class="projdesc">Healthcare, IoT, UI, Qt-based Prototype</h6>
+			                </div>
+			            </div>
+			        </a>
+		        </div>	
 		    </div>
 	    </div>
     </div>
