--- a/index.html
+++ b/index.html
@@ -89,22 +89,22 @@
 </header>
 
 <!-- About Section -->
-<section id="about" class="bg-white">
+<section id="about" class="bg-black">
 	<div class="container content-section text-center">
 		<div class="row">
-			<h1>About me</h1>
+			<h1 style="color:white">About me</h1>
 			<div class="col-lg-8 col-lg-offset-2">
-				<p class="text-left">
+				<p class="text-left" style="color:white">
 					I'm a User Experience Designer based in Eindhoven, The Netherlands, currently working within the <a class="extra" target="_blank" href="http://usitue.nl/">User System Interaction program at TU/e</a>.
 				</p>
-				<p class="text-left">
+				<p class="text-left" style="color:white">
 				 	For the past four years, I've been  <a class="extra"target="_blank" href="http://ieeexplore.ieee.org/document/6880985/">designing assistive technologies solutions</a> for people with communication disorders. I'm inspired to create new solutions that can empower people's life. 
 				</p>
-				<p class="text-left">
+				<p class="text-left" style="color:white">
 					To support my skills as a UX professional, I have a background in Biomedical and Electrical Engineering!
 				</p>
-				<p>
-					<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0" class="btnghost"><i class="fa fa-download"></i> Curriculum Vitae</a>
+				<p >
+					<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0" class="btnghost" style="color:white"><i class="fa fa-download" style="color:white"></i> Curriculum Vitae</a>
 				</p>
 			</div>
 		</div>
@@ -112,7 +112,7 @@
 </section>
 
 <!-- Skills Section -->
-<section id="skills">
+<section id="skills" class="bg-white">
     <div class="container content-section text-center">
         <div class="row">
         	<div class="col-lg-12 text-center">
@@ -171,6 +171,16 @@
         </div>
             
     </div>
+</section>
+
+<!-- About Section -->
+<section id="about" class="bg-black">
+	<div class="container content-section text-center">
+		<div class="row">
+			<h1 style="color:white">Vision</h1>
+			
+		</div>
+	</div>
 </section>
 
 <!-- Portfolio Grid Section -->
@@ -235,8 +245,9 @@
     </div>
 </section>
 
+
 <!-- Contact Section -->
-<section id="contact">
+<section id="contact" class="bg-white">
 	<div class="container content-section text-center">
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
