adding things for skills

--- a/index.html
+++ b/index.html
@@ -121,39 +121,46 @@
             </div>
         </div>
     	<div class="row">   
-            <div class="col-md-4">
-                <span class="fa-stack fa-4x">
-                    <!--i class="fa fa-circle fa-stack-2x text-primary"></i-->
-                    <i class="fa fa-users fa-stack-1x fa"></i>
-                </span>
-                <h4 class="service-heading">User Research</h4>
-                <p class="text-muted">Contextual Task Analysis, Affinity Diagram, Heuristic Evaluation, Think Aloud, Usability Testing</p>
-            </div> 
-            <div class="col-md-4">
-                <span class="fa-stack fa-4x">
-                    <!--i class="fa fa-circle fa-stack-2x text-primary"></i-->
-                    <i class="fa fa-rocket fa-stack-1x fa"></i>
-                </span>
-                <h4 class="service-heading">Prototyping</h4>
-                <p class="text-muted">Arduino, Visual Studio, Axure, Powerpoint, Paper Prototyping</p>
-            </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <span class="fa-stack fa-4x">
                     <!--i class="fa fa-circle fa-stack-2x text-primary"></i-->
                     <i class="fa fa-puzzle-piece fa-stack-1x fa"></i>
                 </span>
                 <h4 class="service-heading">Strategy</h4>
-                <p class="text-muted">Design Thinking, Agile, Design Sprints</p>
+                <p class="text-muted">User-Centered Design, Design Sprint, Agile Orientation</p>
+            </div>  
+            <div class="col-md-3">
+                <span class="fa-stack fa-4x">
+                    <!--i class="fa fa-circle fa-stack-2x text-primary"></i-->
+                    <i class="fa fa-users fa-stack-1x fa"></i>
+                </span>
+                <h4 class="service-heading">Research</h4>
+                <p class="text-muted">Contextual Task Analysis, Interviews, Affinity Diagram, Benchmarking</p>
+            </div> 
+            <div class="col-md-3">
+                <span class="fa-stack fa-4x">
+                    <!--i class="fa fa-circle fa-stack-2x text-primary"></i-->
+                    <i class="fa fa-rocket fa-stack-1x fa"></i>
+                </span>
+                <h4 class="service-heading">Prototype & Test</h4>
+                <p class="text-muted">Arduino, MS Visual Studio, GIT, Axure, Paper Prototyping,  Usability Testing</p>
+            </div>
+            <div class="col-md-3">
+                <span class="fa-stack fa-4x">
+                    <!--i class="fa fa-circle fa-stack-2x text-primary"></i-->
+                    <i class="fa fa-line-chart fa-stack-1x fa"></i>
+                </span>
+                <h4 class="service-heading">Analysis</h4>
+                <p class="text-muted">Data Processing, Data Analytics, Hypothesis Testing, Statistics, Data Visualization</p>
             </div>  
         </div>
         <div class="row text-center">
         <br><br>
         </div>
-        <div class="row text-center">
+        <!--div class="row text-center">
             <div class="col-md-2"></div>
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
-                    <!--i class="fa fa-circle fa-stack-2x text-primary"></i-->
                     <i class="fa fa-line-chart fa-stack-1x fa"></i>
                 </span>
                 <h4 class="service-heading">Data Analytics</h4>
@@ -161,15 +168,14 @@
             </div>
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
-                    <!--i class="fa fa-circle fa-stack-2x text-primary"></i-->
                     <i class="fa fa-code fa-stack-1x fa"></i>
                 </span>
                 <h4 class="service-heading">Programming</h4>
                 <p class="text-muted">C#, C, Javascript, HTML, C++, Java, Python, Git</p>
             </div>
             <div class="col-md-2"></div>           
-        </div>
-            
+        </div-->
+           
     </div>
 </section>
 
@@ -244,7 +250,6 @@
 	    </div>
     </div>
 </section>
-
 
 <!-- Contact Section -->
 <section id="contact" class="bg-white">
