--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <i class="fa fa-rocket fa-stack-1x fa"></i>
                 </span>
                 <h4 class="service-heading">Prototype & Test</h4>
-                <p class="text-muted">Arduino, MS Visual Studio, GIT, Axure, Paper Prototyping,  Usability Testing</p>
+                <p class="text-muted">Arduino, MS Visual Studio, Axure, Paper Prototyping,  Usability Testing</p>
             </div>
             <div class="col-md-3">
                 <span class="fa-stack fa-4x">
