--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
 <!-- About Section -->
 <section id="about" class="bg-black">
 	<div class="container content-section text-center">
-		<div class="row">
+		<div class="row" style="padding-left: 10px; padding-right: 10px;">
 			<h1 style="color:white">About me</h1>
 			<div class="col-lg-8 col-lg-offset-2">
-				<p class="text-left" style="color:white">
+				<p class="text-left" style="color:white;">
 					I'm a User Experience Designer based in Eindhoven, The Netherlands, currently working within the <a class="extra" target="_blank" href="http://usitue.nl/">User System Interaction program at TU/e</a>.
 				</p>
 				<p class="text-left" style="color:white">
@@ -143,7 +143,7 @@
                     <i class="fa fa-rocket fa-stack-1x fa"></i>
                 </span>
                 <h4 class="service-heading">Prototype & Test</h4>
-                <p class="text-muted">Arduino, MS Visual Studio, Axure, Paper Prototyping,  Usability Testing</p>
+                <p class="text-muted">Electronics, Arduino, Eclipse, Visual Studio, Axure, Paper Prototyping,  Usability Testing</p>
             </div>
             <div class="col-md-3">
                 <span class="fa-stack fa-4x">
