--- a/aac.html
+++ b/aac.html
@@ -73,7 +73,7 @@
 				<div class="col-md-8 col-md-offset-2">
 					<h1 class="brand-heading">AAC for people with severe motor dysfunction</h1>
 					<p class="intro-text">ALS, AAC, Prototyping, User Testing, Data Analysis</p>
-					<a style="margin-top: 217px" href="#challenge" class="btn btn-circle page-scroll">
+					<a style="margin-top: 217px" href="#summary" class="btn btn-circle page-scroll">
 					<i class="fa fa-angle-double-down animated"></i>
 					</a>
 				</div>
@@ -81,20 +81,6 @@
 		</div>
 	</div>
 </header>
-
-<!-- Challenge Section -->
-<section id="challenge" class="bg-black">
-	<div class="container content-section text-center">
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
-				<h1 class="text-center" style="color:white; font-weight: normal">Challenge</h1>
-				<h2 class="project-description text-left" style="color:white; padding-top: 20px">
-					Design new features for a <strong class="hlw">software</strong><br><br>that supports <strong class="hlw">communication</strong> for<br><br>users with <strong class="hlw">severe motor dysfunction</strong>
-				</h2>
-			</div>
-		</div>
-	</div>
-</section>
 
 <!-- Summary Section -->
 <section id="summary" class="bg-white">
@@ -115,15 +101,9 @@
 				</p>
 			</div>
 		</div>
-	</div>
-</section>
-
-<!-- Process Section -->
-<section id="process-ov" class="bg-black">
-	<div class="container content-section text-center">
 		<div class="row">
 			<div class="col-md-12 col-md-offset-0">
-				<h1 class="service-heading text-center" style="color:white; font-weight: normal; padding-top: 60px">Methods Overview</h1>
+				<h1 class="service-heading text-center" style="font-weight: normal; padding-top: 60px">Methods Overview</h1>
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1" style="padding-top: 10px">
 						<div class="col-md-4">
@@ -131,16 +111,16 @@
 					       	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
 					    	<i class="fa fa-users fa-stack-1x fa"></i>
 					    </span>
-					    <h4 class="service-heading" style="color:white; padding-top: 20px">Research</h4>
-					    <p style="color:#bbb">Task Analysis, Expert Review, Benchmarking</p>
+					    <h4 class="service-heading" style="padding-top: 20px">Research</h4>
+					    <p style="color:#222">Task Analysis, Expert Review, Benchmarking</p>
 					</div> 
 					<div class="col-md-4">
 					    <span class="fa-stack fa-3x">
 					     	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
 					        <i class="fa fa-lightbulb-o fa-stack-1x fa"></i>
 					    </span>
-					    <h4 class="service-heading" style="color:white; padding-top: 20px">Define & Ideate</h4>
-					    <p style="color:#bbb">Problem statement, Sketching</p>
+					    <h4 class="service-heading" style="padding-top: 20px">Define & Ideate</h4>
+					    <p style="color:#222">Problem statement, Sketching</p>
 					</div>
 					<div class="col-md-4">
 					    <span class="fa-stack fa-3x">
@@ -148,12 +128,26 @@
 					        <i class="fa fa-rocket fa-stack-1x fa"></i>
 					    </span>
 					   	<h4 class="service-heading" style="color:white; padding-top: 20px">Prototype & Test</h4>
-					    <p style="color:#bbb">WPF Prototype, Usability Testing, Data Analysis</p>
+					    <p style="color:#222">WPF Prototype, Usability Testing, Data Analysis</p>
 					</div>
 					</div>
 				</div>
 			</div>
 		</div>	
+	</div>
+</section>
+
+<!-- Challenge Section -->
+<section id="challenge" class="bg-black">
+	<div class="container content-section text-center">
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<h1 class="text-center" style="color:white; font-weight: normal">Challenge</h1>
+				<h2 class="project-description text-left" style="color:white; padding-top: 20px">
+					Design new features for a <strong class="hlw">software</strong><br><br>that supports <strong class="hlw">communication</strong> for<br><br>users with <strong class="hlw">severe motor dysfunction</strong>
+				</h2>
+			</div>
+		</div>
 	</div>
 </section>
 
