--- a/st2.html
+++ b/st2.html
@@ -73,7 +73,7 @@
 				<div class="col-md-8 col-md-offset-2">
 					<h1 class="brand-heading">Engage seniors<br>to (re)establish<br>food-related habits</h1>
 					<p class="intro-text">Interactive-Table, Cooking Aid, Prototype, User Test</p>
-					<a style="margin-top: 217px" href="#challenge" class="btn btn-circle page-scroll">
+					<a style="margin-top: 217px" href="#summary" class="btn btn-circle page-scroll">
 					<i class="fa fa-angle-double-down animated"></i>
 					</a>
 				</div>
@@ -82,11 +82,69 @@
 	</div>
 </header>
 
+<!-- Summary Section -->
+<section id="summary" class="bg-white">
+	<div class="container content-section ">
+		<div class="row">
+			<div class="col-lg-8 col-lg-offset-2">
+				<div class="row">
+					<h1 class="service-heading text-center" style="font-weight: normal">Summary</h1>
+				</div>
+				<div class="row">
+					<p class="text-left">
+						<b>Date:</b> July 2017<br>
+						<b>Clients:</b> Reach 2020 European Consortium, Eindhoven University of Technology (The, Netherlands), Technical University of Munich (Germany)<br>
+						<b>Service:</b> User research, digital prototype<br>
+						<b>Team size:</b> 4 members working directly<br>
+						<b>Duration:</b> 4 weeks<br>
+						<br>
+						<b>My roles:</b> ...<br><br>
+						<b>Results:</b> ...
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<div class="row">
+					<h1 class="service-heading text-center" style="color:black; font-weight: normal; padding-top: 60px">Methods Overview</h1>
+				</div>
+				<div class="row text-center">
+					<div class="col-md-4">
+					    <span class="fa-stack fa-3x">
+					       	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
+					    	<i class="fa fa-users fa-stack-1x fa"></i>
+					    </span>
+					    <h4 class="service-heading" style="padding-top: 20px">Research</h4>
+					    <p style="color:#222">Contextual Inquiry, Interview, Task Analysis, Affinity Diagram, Benchmarking</p>
+					</div> 
+					<div class="col-md-4">
+					    <span class="fa-stack fa-3x">
+					     	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
+					        <i class="fa fa-lightbulb-o fa-stack-1x fa"></i>
+					    </span>
+					    <h4 class="service-heading" style="padding-top: 20px">Define & Ideate</h4>
+					    <p style="color:#222">Problem statement, Mapping, Crazy 8s, Sketch, Storyboard</p>
+					</div>
+					<div class="col-md-4">
+					    <span class="fa-stack fa-3x">
+					        <i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
+					        <i class="fa fa-rocket fa-stack-1x fa"></i>
+					    </span>
+					   	<h4 class="service-heading" style="padding-top: 20px">Prototype & Test</h4>
+					    <p style="color:#222">Wireframing, Powerpoint, Wizard of Oz, Usability Testing</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
 <!-- Challenge Section -->
 <section id="challenge" class="bg-black">
 	<div class="container content-section text-center">
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
+		<div class="col-md-8 col-md-offset-2">
+			<div class="row">
 				<h1 class="text-center" style="color:white; font-weight: normal">Challenge</h1>
 				<h2 class="project-description text-left" style="color:white; padding-top: 20px">
 					Design a <strong class="hlw">digital prototype</strong><br><br>that <strong class="hlw">facilitates</strong> food-related activities<br><br>for a specific group of <strong class="hlw">seniors</strong><!--br><br>using an <strong class="hlw">interactive table</strong-->.
@@ -96,76 +154,20 @@
 	</div>
 </section>
 
-<!-- Summary Section -->
-<section id="summary" class="bg-white">
-	<div class="container content-section text-center">
-		<div class="row">
-			<h1 style="font-weight: normal">Summary</h1>
-			<div class="col-lg-8 col-lg-offset-2">
-				<p class="text-left">
-					<b>Date:</b> July 2017<br>
-					<b>Clients:</b> Reach 2020 European Consortium, Eindhoven University of Technology (The, Netherlands), Technical University of Munich (Germany)<br>
-					<b>Service:</b> User research, digital prototype<br>
-					<b>Team size:</b> 4 members working directly<br>
-					<b>Duration:</b> 4 weeks<br>
-					<br>
-					<b>My roles:</b> ...<br><br>
-					<b>Results:</b> ...
-				</p>
-			</div>
-		</div>
-	</div>
-</section>
 
-<!-- Process Section -->
-<section id="process-ov" class="bg-black">
-	<div class="container content-section text-center">
-		<div class="row">
-			<div class="col-md-12 col-md-offset-0">
-				<h1 class="service-heading text-center" style="color:white; font-weight: normal; padding-top: 60px">Methods Overview</h1>
-				<div class="row">
-					<div class="col-md-10 col-md-offset-1" style="padding-top: 10px">
-						<div class="col-md-4">
-					    <span class="fa-stack fa-3x">
-					       	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-					    	<i class="fa fa-users fa-stack-1x fa"></i>
-					    </span>
-					    <h4 class="service-heading" style="color:white; padding-top: 20px">Research</h4>
-					    <p style="color:#bbb">Contextual Inquiry, Interview, Task Analysis, Affinity Diagram, Benchmarking</p>
-					</div> 
-					<div class="col-md-4">
-					    <span class="fa-stack fa-3x">
-					     	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-					        <i class="fa fa-lightbulb-o fa-stack-1x fa"></i>
-					    </span>
-					    <h4 class="service-heading" style="color:white; padding-top: 20px">Define & Ideate</h4>
-					    <p style="color:#bbb">Problem statement, Mapping, Crazy 8s, Sketch, Storyboard</p>
-					</div>
-					<div class="col-md-4">
-					    <span class="fa-stack fa-3x">
-					        <i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-					        <i class="fa fa-rocket fa-stack-1x fa"></i>
-					    </span>
-					   	<h4 class="service-heading" style="color:white; padding-top: 20px">Prototype & Test</h4>
-					    <p style="color:#bbb">Wireframing, Powerpoint, Wizard of Oz, Usability Testing</p>
-					</div>
-					</div>
-				</div>
-			</div>
-		</div>	
-	</div>
-</section>
 
 <!-- User Research Section -->
 <section id="process-dt" class="bg-white">
 	<div class="container content-section text-center">
 		<div class="row" style="padding-top: 45px">
-			<h1 class="service-heading text-center" style="font-weight: normal; padding-top: 60px">Process</h1>
-			...
-			<!--div class="col-lg-8 col-lg-offset-2">
+			<div class="col-lg-8 col-lg-offset-2 text-left">
+				<h1 class="service-heading" style="font-weight: normal; padding-top: 60px">Process</h1>
+				...
+			</div>
+			<div class="col-lg-8 col-lg-offset-2">
 				<p class="text-left">The target users of this project were seniors (+65) who are lonely and are sedentary. Home care, care home, rehabilitation facilities and hospitals are settings that these users belong. The first step was to visit them in a weekly exercise where they perform a shared cooking activity.</p>
 				<img class="img-fluid" src="img/st/userresearch.jpg" alt="">
-			</div-->
+			</div>
 		</div>
 		<!--div class="row" style="padding-top: 45px">
 			<div class="col-lg-8 col-lg-offset-2">
